gnubiff -- History of visible changes.

Copyright (C) 2000-2006 Nicolas Rougier <Nicolas.Rougier@loria.fr> and
              2004-2006 Robert Sowada <sowadart@gmx.de>.
See the end for copying conditions.
Please send gnubiff bug reports to gnubiff-bugs@lists.sourceforge.net

Version 2.3.0
 * Robert Sowada
   - Changed version to 2.3.0 (from version 2.2.5)
	
Version 2.2.5
 * Robert Sowada
   - Changed version to 2.2.5

Version 2.2.4		2006-12-10 19:47
 * Robert Sowada
   - Changed version to 2.2.4
   - Bugfix: Option "filter_global_last" was not available
   - Updated intltool (to version 0.35.0) and gettext (to version 0.15) files
   - Feature: Portuguese translation (thanks to Gunther Furtado)
   - Updated German translation
   - Added Gunther Furtago to contributors
	
Version 2.2.3		2006-10-15 18:46
 * Robert Sowada
   - Changed version to 2.2.3
   - Bugfix: Encrypting passwords that are longer than 16 characters (debian
        bug #378233; thanks to Julio Mendoza for reporting this bug)
   - Bugfix: Encrypting passwords that have a length of 16, 32, 48 etc.
   - Bugfix: Code fixes to avoid gcc warnings
   - Bugfix: Ignore SIGPIPE signal for using SSL properly
   - Bugfix: Compiling without "fam.h" (thanks to Tom K. for reporting this
        bug)
   - Bugfix: Short password compatibility (debian bug #385625 by Antoine
        Sirinelli)
   - Added Julio Mendoza and Antoine Sirinelli to contributors
   - Bugfix: Including "sys/types.h" when including "regex.h" (needed for
        FreeBSD 4; thanks to Tim Bishop for reporting)

Version 2.2.2           2006-08-06 18:47
 * Robert Sowada
   - Changed version to 2.2.2
   - Bugfix: Obtaining the panel's size (GNOME)
   - Updated Hungarian translation (thanks to Wallner Adam)
   - Updated Vietnamese translation (thanks to Clytie Siddall)
   - Feature: Three new options for filtering messages via regular expressions
        (feature request #1493670 by sunyata and others)